@@ -16,6 +16,7 @@
 
 package org.libx4j.rdb.ddlx;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.math.BigInteger;
@@ -28,6 +29,7 @@ import java.util.Set;
 
 import org.lib4j.lang.Numbers;
 import org.lib4j.lang.PackageLoader;
+import org.lib4j.lang.PackageNotFoundException;
 import org.libx4j.rdb.ddlx.HHuJd6JcA.$Bigint;
 import org.libx4j.rdb.ddlx.HHuJd6JcA.$Binary;
 import org.libx4j.rdb.ddlx.HHuJd6JcA.$Blob;
@@ -65,12 +67,12 @@ abstract class Compiler {
       final Set<Class<?>> classes = PackageLoader.getSystemContextPackageLoader().loadPackage(Compiler.class.getPackage());
       for (final Class<?> cls : classes) {
         if (Compiler.class.isAssignableFrom(cls) && !Modifier.isAbstract(cls.getModifiers())) {
-          final Compiler compiler = (Compiler)cls.newInstance();
+          final Compiler compiler = (Compiler)cls.getDeclaredConstructor().newInstance();
           compilers[compiler.getVendor().ordinal()] = compiler;
         }
       }
     }
-    catch (final ReflectiveOperationException e) {
+    catch (final IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException | PackageNotFoundException e) {
       throw new ExceptionInInitializerError(e);
     }
   }
